--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,8 @@ theme: minima
 header_pages:
   - about.md
   - portfolio.md
+  
+  minima:
+  social_links:
+    - { platform: github,  user_url: "https://github.com/jekyll/jekyll"}
+    - { platform: linkedin, user_url: "https://www.linkedin.com/in/jheaminoff"}
