--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ header_pages:
   
   minima:
   social_links:
-    - { platform: github,  user_url: "https://github.com/jekyll/jekyll"}
+    - { platform: github,  user_url: "https://github.com/narqulie/narqulie"}
     - { platform: linkedin, user_url: "https://www.linkedin.com/in/jheaminoff"}
