--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Portfolio
-description: A portfolio site for my projects
+description: JHEA
 url: https://narqulie.github.io
 theme: minima
 header_pages:
